--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/7433d3320f.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/7433d3320f.js" crossorigin="anonymous"></script>
     <title>Merchandise Store</title>
   </head>
   <body>
@@ -16,10 +13,10 @@
     <nav id="nav">
       <div class="navTop">
         <div class="navItem">
-          <img src="images/logo.png" class="logo" />
+          <img src="images/logo.png" class="logo" alt="Logo" />
         </div>
         <div class="navItem">
-          <img src="images/influencer.png" class="influencer" />
+          <img src="images/influencer.png" class="influencer" alt="Influencer" />
         </div>
         <div class="navItem">
           <i class="fa-solid fa-magnifying-glass icons"></i>
@@ -40,40 +37,40 @@
     <!-- Hero Section -->
     <div class="container">
       <div class="content">
-        <h1 class="Title">WORLD OF MERCHANDISE ——</h1>
-        <h2 class="subTitle">Official collection<br />now live</h2>
+        <h1 class="Title">WORLD OF MERCHANDISE</h1>
+        <h2 class="subTitle">Official Collection<br />Now Live</h2>
         <button class="shopButton">Shop Now</button>
-        <img class="pagination-1" src="images/pagination-1.png" />
+        <img class="pagination-1" src="images/pagination-1.png" alt="Pagination" />
         <i class="fa-solid fa-angle-left"></i>
         <i class="fa-solid fa-angle-right"></i>
       </div>
     </div>
 
-    <!-- Gallery Section  -->
+    <!-- Gallery Section -->
     <div class="gallery">
       <div class="box">
         <div class="column">
-          <img src="images/mugs.png" />
-          <div class="gallery-content1">
+          <img src="images/mugs.png" alt="Mugs" />
+          <div class="gallery-content">
             <h1>Mugs</h1>
             <a href="#">SHOP NOW</a>
           </div>
         </div>
         <div class="column">
-          <img src="images/hoodies.png" />
-          <div class="gallery-content2">
+          <img src="images/hoodies.png" alt="Hoodies" />
+          <div class="gallery-content">
             <h1>Hoodies</h1>
             <a href="#">SHOP NOW</a>
           </div>
-          <img src="images/caps.png" />
-          <div class="gallery-content3">
+          <img src="images/caps.png" alt="Caps" />
+          <div class="gallery-content">
             <h1>Caps</h1>
             <a href="#">SHOP NOW</a>
           </div>
         </div>
         <div class="column">
-          <img src="images/t-shirts.png" />
-          <div class="gallery-content4">
+          <img src="images/t-shirts.png" alt="T-Shirts" />
+          <div class="gallery-content">
             <h1>T-Shirts</h1>
             <a href="#">SHOP NOW</a>
           </div>
@@ -81,136 +78,129 @@
       </div>
     </div>
 
-    <!-- Best Selling Products Section  -->
+    <!-- Best Selling Products Section -->
     <div class="bestProducts">
-      <h1 class="headingTitle">
-        Best Selling Products<span class="dot">.</span>
-      </h1>
-      <img class="path" src="images/path.png" />
+      <h1 class="headingTitle">Best Selling Products<span class="dot">.</span></h1>
+      <img class="path" src="images/path.png" alt="Path" />
       <div class="bestSeller-1">
         <div class="bestSellerItem">
-          <img src="images/best-seller-1.png" class="bestSellerImg" />
+          <img src="images/best-seller-1.png" class="bestSellerImg" alt="Best Seller 1" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-2.png" class="bestSellerImg" />
+          <img src="images/best-seller-2.png" class="bestSellerImg" alt="Best Seller 2" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-3.png" class="bestSellerImg" />
+          <img src="images/best-seller-3.png" class="bestSellerImg" alt="Best Seller 3" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-4.png" class="bestSellerImg" />
+          <img src="images/best-seller-4.png" class="bestSellerImg" alt="Best Seller 4" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
       </div>
-
       <div class="bestSeller-2">
         <div class="bestSellerItem">
-          <img src="images/best-seller-5.png" class="bestSellerImg" />
+          <img src="images/best-seller-5.png" class="bestSellerImg" alt="Best Seller 5" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-6.png" class="bestSellerImg" />
+          <img src="images/best-seller-6.png" class="bestSellerImg" alt="Best Seller 6" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-7.png" class="bestSellerImg" />
+          <img src="images/best-seller-7.png" class="bestSellerImg" alt="Best Seller 7" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
         <div class="bestSellerItem">
-          <img src="images/best-seller-8.png" class="bestSellerImg" />
+          <img src="images/best-seller-8.png" class="bestSellerImg" alt="Best Seller 8" />
           <h1 class="bestSellerTitle">Red T Shirt With Smily</h1>
           <h2 class="bestSellerPrice">Rs.3500</h2>
         </div>
       </div>
     </div>
 
-    <!-- Trending Now Section  -->
+    <!-- Trending Now Section -->
     <div class="trendingNow">
       <div class="trendingContent">
         <h1 class="trendingTitle">Trending Now</h1>
-        <h2 class="trendingParagraph">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum
-        </h2>
+        <h2 class="trendingParagraph">Lorem Ipsum is simply dummy text.</h2>
         <button class="trendingButton">Shop Now</button>
       </div>
     </div>
 
-    <!-- New Arrivals Section  -->
+    <!-- New Arrivals Section -->
     <div class="newArrivals">
       <h1 class="headingTitle">New Arrivals<span class="dot">.</span></h1>
-      <img class="path" src="images/path.png" />
+      <img class="path" src="images/path.png" alt="Path" />
       <div class="arrivals">
         <div class="arrivalsItem">
-          <img src="images/new-arrivals-1.png" class="arrivalsImg" />
+          <img src="images/new-arrivals-1.png" class="arrivalsImg" alt="New Arrival 1" />
           <h1 class="arrivalsTitle">Red T Shirt With Smily</h1>
           <h2 class="arrivalsPrice">Rs.3500</h2>
         </div>
         <div class="arrivalsItem">
-          <img src="images/new-arrivals-2.png" class="arrivalsImg" />
+          <img src="images/new-arrivals-2.png" class="arrivalsImg" alt="New Arrival 2" />
           <h1 class="arrivalsTitle">Red T Shirt With Smily</h1>
           <h2 class="arrivalsPrice">Rs.3500</h2>
         </div>
         <div class="arrivalsItem">
-          <img src="images/new-arrivals-3.png" class="arrivalsImg" />
+          <img src="images/new-arrivals-3.png" class="arrivalsImg" alt="New Arrival 3" />
           <h1 class="arrivalsTitle">Red T Shirt With Smily</h1>
           <h2 class="arrivalsPrice">Rs.3500</h2>
         </div>
       </div>
-      <img src="images/pagination-2.png" class="pagination-2" />
+      <img src="images/pagination-2.png" class="pagination-2" alt="Pagination" />
     </div>
 
-    <!-- Viewed Products Section  -->
+    <!-- Viewed Products Section -->
     <div class="viewedProducts">
       <h1 class="headingTitle">Viewed Products<span class="dot">.</span></h1>
-      <img class="path" src="images/path.png" />
+      <img class="path" src="images/path.png" alt="Path" />
       <div class="viewed">
         <div class="viewedItem">
-          <img src="images/viewed-products-1.png" class="viewedImg" />
+          <img src="images/viewed-products-1.png" class="viewedImg" alt="Viewed Product 1" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
         <div class="viewedItem">
-          <img src="images/viewed-products-2.png" class="viewedImg" />
+          <img src="images/viewed-products-2.png" class="viewedImg" alt="Viewed Product 2" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
         <div class="viewedItem">
-          <img src="images/viewed-products-3.png" class="viewedImg" />
+          <img src="images/viewed-products-3.png" class="viewedImg" alt="Viewed Product 3" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
         <div class="viewedItem">
-          <img src="images/viewed-products-4.png" class="viewedImg" />
+          <img src="images/viewed-products-4.png" class="viewedImg" alt="Viewed Product 4" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
         <div class="viewedItem">
-          <img src="images/viewed-products-5.png" class="viewedImg" />
+          <img src="images/viewed-products-5.png" class="viewedImg" alt="Viewed Product 5" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
         <div class="viewedItem">
-          <img src="images/viewed-products-6.png" class="viewedImg" />
+          <img src="images/viewed-products-6.png" class="viewedImg" alt="Viewed Product 6" />
           <h1 class="viewedTitle">Red T Shirt With Smily</h1>
           <h2 class="viewedPrice">Rs.3500</h2>
         </div>
       </div>
     </div>
 
-    <!-- Top Footer Section  -->
+    <!-- Top Footer Section -->
     <footer>
-      <!-- Footer Left  -->
       <div class="footerLeft">
         <div class="footerMenu1">
           <h1 class="fMenuTitle">HELP CENTER</h1>
@@ -227,8 +217,6 @@
           </ul>
         </div>
       </div>
-
-      <!-- Footer Right  -->
       <div class="footerRight">
         <div class="footerRightMenu">
           <h1 class="fMenuTitle">STAY CONNECTED</h1>
@@ -241,18 +229,14 @@
         <div class="footerRightMenu">
           <h1 class="fMenuTitle">SIGN UP FOR OUR NEWSLETTER</h1>
           <div class="fMail">
-            <input
-              type="text"
-              placeholder="Enter your email address"
-              class="fInput"
-            />
+            <input type="text" placeholder="Enter your email address" class="fInput" />
             <button class="fButton">SUBMIT</button>
           </div>
         </div>
       </div>
     </footer>
 
-    <!-- Bottom Footer Section  -->
+    <!-- Bottom Footer Section -->
     <div class="footer">
       <p>© 2023. Qaiser Ejaz All Rights Reserved.</p>
     </div>
